Agregamos Entidades html

--- a/html/sesion1/index.html
+++ b/html/sesion1/index.html
@@ -28,11 +28,15 @@
   <!-- estilos casi  no se utliza-->
   <strong>Etiquela strong</strong><br>
   <blockquote>sangria </blockquote>
-  <br><br><br><br>
+
   <!--para una sola-->
   <em>palabra inclinado</em>
-
-
+  <br>
+  <!-- Entidades  HTML-->
+  &#63;<br>
+  &#64;
+  <!-- Esto es un <h2>-->
+  <h2>esto es un titulo de la etiqueta &#60;h2&#62;</h2>
 </body>
 
 </html>
