--- a/html/sesion2/ejercio4.html
+++ b/html/sesion2/ejercio4.html
@@ -13,7 +13,7 @@
     <nav>
       <ul>
         <li>
-          <a href="#">Quienes somos</a>
+          <a href="#">¿Quienes somos?</a>
         </li>
         <li>
           <a href="#">Blog</a>
@@ -21,26 +21,24 @@
         <li>
           <a href="#">Contacto</a>
         </li>
-        <img src="https://placeimg.com/60/60/any/grayscale" alt="Mi lotipo">
       </ul>
     </nav>
-    <nav>
+    <img src="https://placeimg.com/60/60/any/grayscale" alt="Mi lotipo">
+    <div>
       <ul>
         <li><a href="#">Categoria 1</a></li>
         <li><a href="#">Categoria 2</a></li>
         <li><a href="#">Categoria 3</a></li>
         <li><a href="#">Categoria 4</a></li>
       </ul>
-    </nav>
+    </div>
   </header>
   <main>
     <section>
       <h1>Un texto muy representativo</h1>
-      <di>
-        <video src="video.mp4" controls="true" autoplay="true" loop></video>
-      </di>
-      <article>
 
+      <video src="video.mp4" controls="true" autoplay="true" loop>El navegador no acepta este formato</video>
+      <article>
         <img src="https://placeimg.com/200/200/arch" alt="arch">
         <h2> lore ipson dolor sit amet</h2>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vero similique esse earum voluptatum, commodi eaque
@@ -54,28 +52,30 @@
           veniam? </p>
         <p><a href="#">+info</a></p>
         <img src="https://placeimg.com/200/200/nature" alt="nature">
+        <footer>
+          <p><i>Personas que conectan con personas</i></p>
+        </footer>
       </article>
-      <i>Personas que conectan con personas</i>
     </section>
     <section>
       <h3>Sabias que ...</h3>
       <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vero similique esse earum voluptatum, commodi eaque
         veniam? </p>
-    </section>
-    <section>
-      <h3>Contacto</h3>
-      <ul>
-        <li>calle Número, Barcelona</li>
-        <li>Telefono<a href="#"> 932 314 444</a></li>
-        <li><a href="#">info@cts.com</a></li>
-      </ul>
+      <div>
+        <h3>Contacto</h3>
+        <ul>
+          <li>calle Número, Barcelona</li>
+          <li>Telefono<a href="#"> 932 314 444</a></li>
+          <li><a href="#">info@cts.com</a></li>
+        </ul>
+      </div>
     </section>
   </main>
-  <footer>
+  <div>
     <img src="https://placeimg.com/60/60/any/grayscale" alt="logo1">
     <img src="https://placeimg.com/60/60/any" alt="logo2">
     <img src="https://placeimg.com/60/60/any/nature" alt="logo3">
-  </footer>
+  </div>
 </body>
 
 </html>
