Ejercio de position

--- a/css/session3/ejercio.html
+++ b/css/session3/ejercio.html
@@ -10,24 +10,21 @@
 </head>
 
 <body>
-  <section class="container">
+  <main class="container">
     <div class="superior">
-
     </div>
+
     <div class="inferior">
-      <div class="cajap">
 
-      </div>
-      <div class="cajas">
+      <div class="cajap caja"></div>
+      <div class="cajas caja"></div>
 
-      </div>
       <div class="cajaultima">
         <span>120</span>
       </div>
+
     </div>
-
-
-  </section>
+  </main>
 
 </body>
 
