--- a/js/sesion1/index.html
+++ b/js/sesion1/index.html
@@ -15,14 +15,20 @@
      <script src="./index.js">
 </script> -->
   <!--   <script src="./String.js"></script>  -->
-  <!--
+  <!--<script src="./matrices.js"></script>
      <script src="./number.js"></script>
        <script src="./arraysMetodos.js"></script>
       <script src="./arrays.js"></script>
       <script src="./funciones.js"></script> 
       <script src="./objetos.js"></script>
-  -->
 
+      <script src="./cadenas.js"></script>
+      <script src="./iteraciones.js"></script>
+      
+  -->
+  <script src="./ejercios.js">
+
+  </script>
 
 </body>
 
